--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- Choices -->
       <div class="flex justify-center space-x-4">
         <button @click="play('rock')" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 flex flex-col items-center">
-          <img src="img/rock.png" alt="Rock" class="w-16 h-16 object-cover rounded mb-1">
+          <img src="img/rock.jpg" alt="Rock" class="w-16 h-16 object-cover rounded mb-1">
           Rock
         </button>
         <button @click="play('paper')" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 flex flex-col items-center">
