--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
           <div>
             <p class="font-semibold mb-1">Player</p>
             <template x-if="playerChoice">
-              <img :src="'img/' + playerChoice + '.png'" :alt="playerChoice" class="w-20 h-20 object-cover rounded border">
+              <img :src="'img/' + playerChoice + '.jpg'" :alt="playerChoice" class="w-20 h-20 object-cover rounded border">
             </template>
           </div>
 
           <div>
             <p class="font-semibold mb-1">Computer</p>
             <template x-if="computerChoice">
-              <img :src="'img/' + computerChoice + '.png'" :alt="computerChoice" class="w-20 h-20 object-cover rounded border">
+              <img :src="'img/' + computerChoice + '.jpg'" :alt="computerChoice" class="w-20 h-20 object-cover rounded border">
             </template>
           </div>
         </div>
